# protein-transformer

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: 1M.yaml  5M.yaml
scripts/: build_dataset.py  build_filtered_fasta.py  build_splits.py  evaluate.py  export_for_protspace.py  filter_protspace.py  inspect_data.py  train.py
src/plm/: config.py
src/plm/data/: collator.py  dataset.py  fasta.py  tokenizer.py
src/plm/eval/: knn_probe.py  perplexity.py  tape_data.py
src/plm/model/: attention.py  embeddings.py  mlm.py  transformer.py
src/plm/training/: checkpoint.py  trainer.py
tests/: test_checkpoint_resume.py  test_collator.py  test_model_shapes.py  test_tokenizer.py
